Full-width to avoid text clipping due to text size/weight
This is an experimental fix, not sure if it will help on the OnePlus
devices. Not personally owning such a device to test.

--- a/packages/block-editor/src/components/media-placeholder/styles.native.scss
+++ b/packages/block-editor/src/components/media-placeholder/styles.native.scss
@@ -32,6 +32,7 @@
 }
 
 .emptyStateDescription {
+	width: 100%;
 	text-align: center;
 	color: $blue-wordpress;
 	font-size: 14;
